--- a/client/src/app/auth/auth.component.html
+++ b/client/src/app/auth/auth.component.html
@@ -1,26 +1,45 @@
-<div class="row">
+<div class="row center">
   <div class="col-xs-12 col-md-6 col-md-offset-3">
-    <div class="alert alert-danger" *ngIf="error">
+    <div *ngIf="error" class="alert alert-danger">
       <p>{{ error.message }}</p>
     </div>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
       <div class="form-group">
         <label>E-Mail</label>
-        <input type="email" id="email" class="form-control" [formControl]="f().email"/>
+        <input [formControlName]="'email'" class="form-control" id="email" type="email"/>
+        <p *ngIf="isControlHasError('email','required')" class="text-danger">
+          <small><strong>Email is required</strong></small>
+        </p>
+        <p *ngIf="isControlHasError('email','email')" class="text-danger">
+          <small><strong>Field is not valid</strong></small>
+        </p>
       </div>
       <div class="form-group">
         <label>Password</label>
-        <input type="password" id="password" class="form-control" [formControl]="f().password"/>
+        <input [formControlName]="'password'" class="form-control" id="password" type="password"/>
+        <p *ngIf="isControlHasError('password','required')" class="text-danger">
+          <small><strong>Password is required</strong></small>
+        </p>
+        <p *ngIf="isControlHasError('password','minlength')" class="text-danger">
+          <small><strong>password minimum length is 6</strong></small>
+        </p>
       </div>
       <div>
-        <button class="btn btn-primary" type="submit">{{isLoginMode ? 'login' : 'Sign up'}}</button> |
-        <button class="btn btn-primary" (click)="onSwitchMode()" type="button">Switch to {{isLoginMode ? 'Sign up' : 'login' }}</button>
+        <button class="btn btn-primary" type="submit">{{isLoginMode ? 'login' : 'Sign up'}}</button>
+        |
+        <button (click)="onSwitchMode()" class="btn btn-primary" type="button">Switch
+          to {{isLoginMode ? 'Sign up' : 'login' }}</button>
       </div>
       <div *ngIf="isLoading" style="text-align: center">
-        <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+        <div class="lds-ring">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </div>
       <div>
-        <button class="btn btn-primary" type="button" *ngIf="isLogin" (click)="signOut()">sign out</button>
+        <button (click)="signOut()" *ngIf="isLogin" class="btn btn-primary" type="button">sign out</button>
       </div>
     </form>
   </div>
