--- a/client/src/app/auth/auth.component.html
+++ b/client/src/app/auth/auth.component.html
@@ -1,7 +1,7 @@
 <div class="row center">
   <div *ngIf="!isLoggedIn" class="col-xs-12 col-md-6 col-md-offset-3">
     <div *ngIf="error" class="alert alert-danger">
-      <p>{{ error.message }}</p>
+      <p>{{ error }}</p>
     </div>
     <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
       <div class="form-group">
