--- a/client/src/app/auth/auth.component.html
+++ b/client/src/app/auth/auth.component.html
@@ -7,22 +7,22 @@
       <div class="form-group">
         <label>E-Mail</label>
         <input [formControlName]="'email'" class="form-control" id="email" type="email"/>
-        <p *ngIf="isControlHasError('email','required')" class="text-danger">
+        <span *ngIf="isControlHasError('email','required')" class="text-danger">
           <small><strong>Email is required</strong></small>
-        </p>
-        <p *ngIf="isControlHasError('email','email')" class="text-danger">
+        </span>
+        <span *ngIf="isControlHasError('email','email')" class="text-danger">
           <small><strong>Field is not valid</strong></small>
-        </p>
+        </span>
       </div>
       <div class="form-group">
         <label>Password</label>
         <input [formControlName]="'password'" class="form-control" id="password" type="password"/>
-        <p *ngIf="isControlHasError('password','required')" class="text-danger">
+        <span *ngIf="isControlHasError('password','required')" class="text-danger">
           <small><strong>Password is required</strong></small>
-        </p>
-        <p *ngIf="isControlHasError('password','minlength')" class="text-danger">
+        </span>
+        <span *ngIf="isControlHasError('password','minlength')" class="text-danger">
           <small><strong>password minimum length is 6</strong></small>
-        </p>
+        </span>
       </div>
       <div *ngIf="!isLoginMode" class="form-check pb-3">
         <input type="checkbox" class="form-check-input" id="exampleCheck1" [formControlName]="'enable2fa'">
