--- a/client/src/app/auth/verify2fa-secret-code/verify2fa-secret-code.component.html
+++ b/client/src/app/auth/verify2fa-secret-code/verify2fa-secret-code.component.html
@@ -10,17 +10,25 @@
   <div class="form-group">
     <label>Code</label>
     <input [formControlName]="'code'" class="form-control" id="code" type="text"/>
-    <p *ngIf="isControlHasError('code','required')" class="text-danger">
+    <span *ngIf="isControlHasError('code','required')" class="text-danger">
       <small><strong>code is required</strong></small>
-    </p>
-    <p *ngIf="isControlHasError('code','minlength')" class="text-danger">
+    </span>
+    <span *ngIf="isControlHasError('code','minlength')" class="text-danger">
       <small><strong>password minimum length is 6</strong></small>
-    </p>
-    <p *ngIf="isControlHasError('code','maxlength')" class="text-danger">
+    </span>
+    <span *ngIf="isControlHasError('code','maxlength')" class="text-danger">
       <small><strong>password maximum length is 6</strong></small>
-    </p>
+    </span>
   </div>
   <div>
     <button class="btn btn-primary" type="submit">verify</button>
+  </div>
+  <div *ngIf="isLoading" style="text-align: center">
+    <div class="lds-ring">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
   </div>
 </form>
