add 2fa secret key so user can scan the qr image or enter the key

--- a/client/src/app/auth/verify2fa-secret-code/verify2fa-secret-code.component.html
+++ b/client/src/app/auth/verify2fa-secret-code/verify2fa-secret-code.component.html
@@ -1,10 +1,11 @@
 <form (ngSubmit)="verifyCode()" [formGroup]="verificationForm">
   <h1>Sign Up: Setup and verify Two-Step Authentication</h1>
 
-  <p>Open or scan the following link with your Authenticator app</p>
+  <p>Open or scan the following link with your Authenticator app, if the qr image is not showing please enter 2fa secret key</p>
   <p>
     <a [href]="qrSafeLink"><img [src]="qrCode" alt="google authenticator qr code"></a>
   </p>
+  <p>{{user.code_2fa}}</p>
 
   <p>Enter the 6-digit code from your authenticator app into the code field</p>
   <div class="form-group">
