--- a/client/src/app/auth/auth.component.html
+++ b/client/src/app/auth/auth.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div *ngIf="!isLoggedIn && !verify" class="col-xs-12 col-md-6 col-md-offset-3">
+  <div *ngIf="!isLoggedIn && !verify && !isEnabled2fa" class="col-xs-12 col-md-6 col-md-offset-3">
     <div *ngIf="error" class="alert alert-danger">
       <p>{{ error }}</p>
     </div>
@@ -25,7 +25,7 @@
         </span>
       </div>
       <div *ngIf="!isLoginMode" class="form-check pb-3">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1" [formControlName]="'enable2fa'">
+        <input [formControlName]="'enable2fa'" class="form-check-input" id="exampleCheck1" type="checkbox">
         <label class="form-check-label" for="exampleCheck1">enable 2fa authentication</label>
       </div>
       <div>
@@ -48,6 +48,10 @@
     <button (click)="signOut()" class="btn btn-primary" type="button">sign out</button>
   </div>
   <div *ngIf="verify">
-   <app-verify2fa-secret-code [user]="userToSend"></app-verify2fa-secret-code>
+    <app-verify2fa-secret-code [user]="userToSend"></app-verify2fa-secret-code>
+  </div>
+  <div *ngIf="isEnabled2fa">
+    <app-verify-secret-key-after-login [email]="email"
+                                       [password]="password"></app-verify-secret-key-after-login>
   </div>
 </div>
