show error if verification code is not going well

--- a/client/src/app/auth/verify2fa-secret-code/verify2fa-secret-code.component.html
+++ b/client/src/app/auth/verify2fa-secret-code/verify2fa-secret-code.component.html
@@ -2,6 +2,9 @@
   <h1>Sign Up: Setup and verify Two-Step Authentication</h1>
 
   <p>Open or scan the following link with your Authenticator app, if the qr image is not showing please enter 2fa secret key</p>
+  <div *ngIf="error" class="alert alert-danger">
+    <p>{{ error }}</p>
+  </div>
   <p>
     <a [href]="qrSafeLink"><img [src]="qrCode" alt="google authenticator qr code"></a>
   </p>
