--- a/client/src/app/auth/verify2fa-secret-code/verify2fa-secret-code.component.html
+++ b/client/src/app/auth/verify2fa-secret-code/verify2fa-secret-code.component.html
@@ -1,7 +1,8 @@
 <form (ngSubmit)="verifyCode()" [formGroup]="verificationForm">
   <h1>Sign Up: Setup and verify Two-Step Authentication</h1>
 
-  <p>Open or scan the following link with your Authenticator app, if the qr image is not showing please enter 2fa secret key</p>
+  <p>Open or scan the following link with your Authenticator app, if the qr image is not showing please enter 2fa secret
+    key</p>
   <div *ngIf="error" class="alert alert-danger">
     <p>{{ error }}</p>
   </div>
