--- a/client/src/app/auth/verify2fa-secret-code/activate-account.component.html
+++ b/client/src/app/auth/verify2fa-secret-code/activate-account.component.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="verifyCode()" [formGroup]="verificationForm">
-  <h1>Sign Up: Setup and verify Two-Step Authentication</h1>
+  <h1>Activate your account: Setup and verify Two-Step Authentication</h1>
 
   <p>Open or scan the following link with your Authenticator app, if the qr image is not showing please enter 2fa secret
     key</p>
