--- a/client/src/app/auth/auth.component.html
+++ b/client/src/app/auth/auth.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div *ngIf="!isLoggedIn && !verify && !isEnabled2fa" class="col-xs-12 col-md-6 col-md-offset-3">
+  <div *ngIf="!isLoggedIn && !verify && !isEnabled2fa && !isNotActivated" class="col-xs-12 col-md-6 col-md-offset-3">
     <div *ngIf="error" class="alert alert-danger">
       <p>{{ error }}</p>
     </div>
@@ -53,5 +53,8 @@
   <div *ngIf="isEnabled2fa">
     <app-verify-secret-key-after-login [email]="email"
                                        [password]="password"></app-verify-secret-key-after-login>
+  </div>
+  <div *ngIf="isNotActivated">
+    <app-activate-account [user]="userToSend"></app-activate-account>
   </div>
 </div>
