set error and stock token after verification

--- a/client/src/app/auth/verify-secret-key-after-login/verify-secret-key-after-login.component.html
+++ b/client/src/app/auth/verify-secret-key-after-login/verify-secret-key-after-login.component.html
@@ -1,5 +1,8 @@
 <form (ngSubmit)="verifyCode()" [formGroup]="verificationForm">
   <h1>Log In: verify Two-factor Authentication</h1>
+  <div *ngIf="error" class="alert alert-danger">
+    <p>{{ error }}</p>
+  </div>
   <p>To complete login you should enter the 6-digit key from your authenticator app into the code field</p>
   <div class="form-group">
     <label>Code</label>
