check 2fa type while sign up

--- a/client/src/app/auth/auth.component.html
+++ b/client/src/app/auth/auth.component.html
@@ -43,7 +43,7 @@
             <span>  Google authenticator</span>
           </label>
           <label style="margin-left: 1rem">
-            <input type="radio" value="SMS" formControlName="type_2fa">
+            <input type="radio" value="sms" formControlName="type_2fa">
             <span>  sms</span>
           </label>
         </div>
