--- a/client/src/app/auth/auth.component.html
+++ b/client/src/app/auth/auth.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div *ngIf="!isLoggedIn && !verify && !isEnabled2fa && !isNotActivated && !isSMSSanded" class="col-xs-12 col-md-6 col-md-offset-3">
+  <div *ngIf="isLoginMode && !isLoggedIn && !isEnabled2fa && !isNotActivated && !isSMSSanded" class="col-xs-12 col-md-6 col-md-offset-3">
     <div *ngIf="error" class="alert alert-danger">
       <p>{{ error }}</p>
     </div>
@@ -24,35 +24,8 @@
           <small><strong>password minimum length is 6</strong></small>
         </span>
       </div>
-      <div class="form-group">
-        <label>Phone number</label>
-        <input [formControlName]="'phoneNumber'" class="form-control" id="phoneNumber" type="text"/>
-        <span *ngIf="isControlHasError('phoneNumber','required')" class="text-danger">
-          <small><strong>Phone number is required</strong></small>
-        </span>
-      </div>
-      <div *ngIf="!isLoginMode" class="form-check pb-3">
-        <div>
-          <input [formControlName]="'enable2fa'" class="form-check-input" id="exampleCheck1" type="checkbox">
-          <label class="form-check-label" for="exampleCheck1">enable 2fa authentication</label>
-        </div>
-        <div *ngIf="f().enable2fa.value">
-          <label class="form-check-label">choose seconde factor: </label>
-          <label style="margin-left: 1rem">
-            <input type="radio" value="GoogleAuth" formControlName="type_2fa">
-            <span>  Google authenticator</span>
-          </label>
-          <label style="margin-left: 1rem">
-            <input type="radio" value="sms" formControlName="type_2fa">
-            <span>  sms</span>
-          </label>
-        </div>
-      </div>
       <div>
-        <button class="btn btn-primary" type="submit">{{isLoginMode ? 'login' : 'Sign up'}}</button>
-        |
-        <button (click)="onSwitchMode()" class="btn btn-primary" type="button">Switch
-          to {{isLoginMode ? 'Sign up' : 'login' }}</button>
+        <button class="btn btn-primary" type="submit">Login</button>
       </div>
       <div *ngIf="isLoading" style="text-align: center">
         <div class="lds-ring">
@@ -64,17 +37,22 @@
       </div>
     </form>
   </div>
-  <div *ngIf="isLoggedIn">
-    <button (click)="signOut()" class="btn btn-primary" type="button">sign out</button>
-  </div>
-  <div *ngIf="verify">
-    <app-activate-account [user]="userToSend" (isActivated)="isActivated($event)"></app-activate-account>
-  </div>
-  <div *ngIf="isEnabled2fa || isSMSSanded">
-    <app-verify-secret-key-after-login [email]="email"
-                                       [password]="password" (isActivated)="isActivated($event)"></app-verify-secret-key-after-login>
-  </div>
-  <div *ngIf="isNotActivated">
-    <app-activate-account [user]="userToActivate" (isActivated)="isActivated($event)"></app-activate-account>
-  </div>
+</div>
+<div *ngIf="!isLoginMode">
+  <app-sign-up></app-sign-up>
+</div>
+<div *ngIf="!isLoggedIn && isEnabled2fa && !isNotActivated && !isSMSSanded" style="margin-top: 10px">
+  |
+  <button (click)="onSwitchMode()" class="btn btn-primary" type="button">Switch
+    to {{isLoginMode ? 'Sign up' : 'login' }}</button>
+</div>
+<div *ngIf="isLoggedIn">
+  <button (click)="signOut()" class="btn btn-primary" type="button">sign out</button>
+</div>
+<div *ngIf="isEnabled2fa || isSMSSanded">
+  <app-verify-secret-key-after-login [email]="email"
+                                     [password]="password" (isActivated)="isActivated($event)"></app-verify-secret-key-after-login>
+</div>
+<div *ngIf="isNotActivated">
+  <app-activate-account [user]="userToActivate" (isActivated)="isActivated($event)"></app-activate-account>
 </div>
